# TRACE-SAM

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  LICENSE  MODEL_CARD.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  run_trace_sam.ps1  run_trace_sam.sh
checkpoints/: README.md  manifest.json
configs/: demo_cpu.yaml  paper_trace_sam_sr.yaml
configs/trace_sam_sr/: main_pipeline.yaml
demo_data/: README.md  manifest.csv
docs/: DATASET_PROTOCOL.md  THIRD_PARTY_NOTICES.md
docs/results/: ablation_results_summary.csv  ablation_results_summary.md  experiment_results_summary.csv
playground/: README.md
scripts/: collect_paper_figures.py  launch_crackguard_4gpu.sh  package_crackguard_ablation_results.py  prepare_bicubic_aug_control.py  run_recognition_variant.py  run_trace_sam.ps1  run_trace_sam.sh
tools/: __init__.py  evaluate_sr.py  infer_sr.py  make_demo_dataset.py  run_full_pipeline.py  train_sr.py
trace_sam/: __init__.py
trace_sam/data/: __init__.py  bridge_crack.py  degradations.py  hr_images.py  topology.py
trace_sam/evaluation/: __init__.py  metrics.py
trace_sam/losses/: __init__.py  crack_losses.py
trace_sam/models/: __init__.py  factory.py  sr_blocks.py  trace_extractor.py  trace_pipeline.py  trace_sam_sr.py
trace_sam/scripts/: evaluate_trace_aug_recognition.py  evaluate_trace_sam.py  evaluate_trace_sam_sr.py  evaluate_trace_sr_predictions.py  export_trace_sr_images.py  generate_trace_aug_full_images.py  generate_trace_aug_patches.py  infer_trace_sam_sr.py  prepare_local_bridge_data.py  run_full_pipeline.py  (+6 more)
(+6 files in other folders)
