[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-sam-sr"
version = "0.1.0"
description = "TRACE-SAM-SR: fracture-field guided trustworthy super-resolution for low-resolution concrete crack segmentation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Baoxian Li"},
  {name = "Yuyang Bao"},
  {name = "Si Chen"},
  {name = "Longsheng Bao"},
  {name = "Jiakang Zhao"},
  {name = "Ling Yu"}
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "einops>=0.6",
  "tqdm>=4.64"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
trace-sam-make-demo = "tools.make_demo_dataset:main"
trace-sam-train-sr = "trace_sam.scripts.train_trace_sam_sr:main"
trace-sam-infer-sr = "trace_sam.scripts.infer_trace_sam_sr:main"
trace-sam-evaluate-sr = "trace_sam.scripts.evaluate_trace_sr_predictions:main"
trace-sam-run-full = "trace_sam.scripts.run_full_pipeline:main"

[tool.setuptools.packages.find]
include = ["trace_sam*", "tools"]
